# Igor

./: .gitignore  CMakeLists.txt  Makefile  README.md  test.cpp  test_Assert.cpp  test_Defer.cpp  test_Panic.cpp  test_Print.cpp  test_ProgressBar.cpp  test_ScopeTimer.cpp  test_Sqrt.cpp  test_StaticVector.cpp  test_StripPath.cpp  test_Todo.cpp  test_on_death.cpp
Igor/: Defer.hpp  Igor.hpp  Logging.hpp  Math.hpp  MdArray.hpp  MdspanToNpy.hpp  MemoryToString.hpp  ProgressBar.hpp  StaticVector.hpp
doc/: Doxyfile
include/: Igor.hpp
test/: CMakeLists.txt  test_Assert.cpp  test_Defer.cpp  test_DisableAssert.cpp  test_Logging.cpp  test_Math.cpp  test_MdArray.cpp  test_MemoryToString.cpp  test_OnDeath.cpp  test_StaticVector_Destruct.cpp  test_StaticVector_Erase.cpp  test_StaticVector_Initialize.cpp  test_StaticVector_Insert.cpp  test_StaticVector_Iterator.cpp  test_StripPath.cpp
